--- a/style.css
+++ b/style.css
@@ -1,44 +1,46 @@
-body{
-    background-color: grey;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, Helvetica, sans-serif, "Lucida Grande";
-    height: 100%;
+body {
+  background-color: grey;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
+    Arial, Helvetica, sans-serif, "Lucida Grande";
+  height: 100%;
 }
 
 .wrapper {
-    width: 800px;
-    margin: 30px auto;
-    color: #fff;
-    text-align: center;
+  width: 800px;
+  margin: 30px auto;
+  color: #fff;
+  text-align: center;
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    font-size: 2.6em;
-    text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 2.6em;
+  text-transform: uppercase;
 }
 
-#seconds, #tens {
-    font-size: 2em;
+#seconds,
+#tens {
+  font-size: 2em;
 }
 
 button {
-    border-radius: 5px;
-    background-color: grey;
-    color: white;
-    border: solid 1px white;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 1.2em;
-    padding: 18px 10px;
-    width: 180px;
-    margin: 10px;
-    outline: none;
+  border-radius: 5px;
+  background-color: #232f3e;
+  color: white;
+  border: solid 1px white;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  padding: 18px 10px;
+  width: 180px;
+  margin: 10px;
+  outline: none;
 }
 
 button:hover {
-    transition: all 0.5s ease-in-out;
-    background-color: white;
-    border: solid 1px white;
-    color: grey;
+  transition: all 0.5s ease-in-out;
+  background-color: white;
+  border: solid 1px white;
+  color: grey;
 }
